--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
 <br><br>
                     <a href="zadanie78_koco.html" target="strony">Zadanie78</a>
 <br><br>
-                    <a href="zadanie79_koco.html" target="strony">Zadanie79</a>
+                    <a href="zadanie79_kocon.html" target="strony">Zadanie79</a>
 <br><br>
                     <a href="zadanie81_koco.html" target="strony">Zadanie81</a>
 <br><br>
                     <a href="zadanie82_koco.html" target="strony">Zadanie82</a>
 <br><br>
-                    <a href="zadanie83_koco.html" target="strony">Zadanie83</a>
+                    <a href="zadanie83_koco.html" target="blank">Zadanie83</a>
 <br><br>
 
                 <td align=center>
